--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -66,6 +66,9 @@ chrono = { version = "0.4", features = ["serde"] }
 # URL Encoding
 urlencoding = "2"
 
+# Base64 Encoding
+base64 = "0.22"
+
 # Secure Credential Storage (OS keychain)
 keyring = "3"
 
