--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -75,6 +75,9 @@ sha2 = "0.10"
 # Secure Credential Storage (OS keychain)
 keyring = "3"
 
+[target."cfg(target_os = \"macos\")".dependencies]
+cocoa = "0.26"
+
 [dev-dependencies]
 tempfile = "3"
 
