--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@monaco-editor/react": "^4.7.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-store": "^2.4.2",
+    "@tauri-apps/plugin-updater": "^2.10.0",
     "monaco-editor": "^0.55.1",
     "picomatch": "^4.0.3",
     "react": "^19.1.0",
