Change releaseDraft to false in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -157,6 +157,6 @@ jobs:
           tagName: v${{ inputs.version }}
           releaseName: 'Ultra GitLab v${{ inputs.version }}'
           releaseBody: ${{ needs.changelog.outputs.content }}
-          releaseDraft: true
+          releaseDraft: false
           prerelease: false
           args: --target aarch64-apple-darwin
